# uni_projects

ccex/: Makefile  README  cex.out  run.sh
ccex/ccex/: Makefile  c-ex-types.h  cex.lex  cex.output  cex.tab.c  cex.tab.h  cex.y  context.c  context.h  exception.c  exception.h  exceptions.cex  expression.c  expression.h  hash_close.c  hash_close.h  hash_func.c  hash_table.c  hash_table.h  identifier.h  label.c  label.h  lex.yy.c  line.c  list.h  mort_subite.cex  object.h  output.c  output.h  seq.h  seq_affect.c  seq_array_allocate.c  seq_array_get.c  seq_call.c  seq_input_print.c  seq_ops.c  seq_return.c  seq_test.c  seq_try.c  string.c  (+5 more)
ccex/ccex3a/: 3add.lex  3add.output  3add.tab.c  3add.tab.h  3add.y  Makefile  context.c  context.h  data.h  function.c  function.h  hash_open.c  hash_open.h  identifier.c  lex.yy.c  line.h  list.c  main.h  parse.c  parse.h  seq.c  seq.h  variable.c  variable.h
ccex/examples/: exceptions.cex  fork.cex  no.cex  recurs.cex  tableaux.cex
ccex/lib/: Makefile  array.c  array.h  defs_exceptions.h  exception.c  exception.h  main.c  print.c
projet_c/: AUTHORS  Makefile  Makefile.am  Makefile.in  TeaPot.512.loss0.ppm  TeaPot.512.loss0.qtc  TeaPot.512.loss7.qtc  TeaPot.512.loss8.qtc  aclocal.m4  config.status  configure  configure.ac  me  qtree  test.qtc  tpop
projet_c/doc/: Makefile  Makefile.am  Makefile.in  report.sxw
projet_c/src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  file_bit.c  file_bit.h  image_common.h  load_ppm.c  load_ppm.h  load_qtc.c  load_qtc.h  main.c  main.h  picture.c  picture.h  quad  quadcomp.c  quadcomp.h  quadpic.c  quadpic.h  quadtree.c  quadtree.h  save_ppm.c  save_ppm.h  save_qtc.c  save_qtc.h  ui_main.c  ui_main.h  ui_util.c  ui_util.h  util.c  util.h
projet_huffman/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.status  configure  configure.ac
projet_huffman/doc/: Makefile  Makefile.am  Makefile.in  aarbre.dia  aarbre.dia~  arbre.dia  arbre.dia~  arbre.dxf  output.ps  output1.ps  report.sxw
projet_huffman/src/: Makefile  Makefile.am  Makefile.in  alpha.c  alpha.h  bfile.c  bfile.h  comp.c  comp.h  config.h  config.h.in  config.h.in~  data.h  hash_close.c  hash_close.h  hash_func.c  hash_func.h  hash_open.c  hash_open.h  hash_table.c  hash_table.h  hpress  huff.c  huff.h  lex.c  lex.h  list.c  list.h  main.c  main.h  malloc_hook.c  palloc.c  palloc.h  word.c  word.h
projet_optimisation/: annealing.rb  convexenv.rb  display.rb  edge.rb  elastic.rb  far.rb  graph.rb  heap.rb  main.rb  map.rb  point.rb  preferences.rb  prim.rb  semantic.cache  sepeval.rb  status.rb  timecounter.rb  tree.rb  ui.glade  ui.glade.bak  ui.gladep.bak  vector.rb
projet_optimisation/examples/: plop.txt  plop2.txt  plop3.txt
projet_sys/: Makefile  Makefile.in  cl.cfg  config.status  config.txt  configure  configure.ac  dict.txt
projet_sys/doc/: pl  report.abw  report.html  report.sxw
projet_sys/src/: Makefile  Makefile.am  Makefile.in  cl_main.c  cl_main.h  cl_mptc  cl_parse.c  cl_parse.h  cl_ui_chat.c  cl_ui_chat.h  cl_ui_conn.c  cl_ui_conn.h  cl_ui_list.c  cl_ui_list.h  cl_ui_main.c  cl_ui_main.h  cl_ui_menu.c  cl_ui_menu.h  cl_ui_play.c  cl_ui_play.h  cl_ui_setu.c  cl_ui_setu.h  cl_ui_util.c  cl_ui_util.h  cl_util.c  cl_util.h  cl_word.c  cl_word.h  config.c  config.h  data.h  event.c  event.h  hash_open.c  hash_table.h  list.c  list.h  mptc_config.h  mptc_config.h.in  network.c  (+22 more)
