bin_PROGRAMS = hpress
hpress_SOURCES = \
	alpha.c alpha.h\
	bfile.c bfile.h\
	comp.c comp.h\
	data.h\
	hash_close.c hash_close.h\
	hash_func.c hash_func.h\
	hash_open.c hash_open.h\
	hash_table.c hash_table.h\
	huff.c huff.h\
	lex.c lex.h\
	list.c list.h\
	main.c main.h\
	palloc.c palloc.h\
	word.c word.h\
	malloc_hook.c

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*
